# Agents

./: .gitignore  README.md  WARP.md  pyproject.toml  requirements.txt
Day01_AIWorkflow/: agenticSolForBusiness.ipynb  basicAiWorkflow.ipynb
