[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "jupyterlab>=4.4.9",
    "notebook>=7.4.7",
    "python-dotenv>=1.1.1",
]
